--- a/Corgiwrites-dash.css
+++ b/Corgiwrites-dash.css
@@ -1,1 +1,82 @@
-CSS
+body{
+  background: #FFF042;
+}
+
+.header_background{
+  text-align: center;
+  background-color: #970000;
+  border-radius: 0px 0px 25px 25px;
+  position: fixed;
+  width: 100%;
+  height: 20%;
+  display: block;
+  position: fixed;
+  z-index: 5;
+}
+
+.header h1{
+  margin-bottom: 25px;
+}
+
+.header_b{
+  margin-left: 5%;
+  margin-right: 5%;
+  display: inline-block;
+  position: relative;
+  width: 20%;
+  height: 30%;
+  background-color: #D80000;
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+.timeline_background{
+  text-align: center;
+  background-color: #FFA703;
+  position: fixed;
+  width: 85%;
+  z-index: 1;
+  margin-left: 15%;
+  margin-top: 10%;
+}
+
+.timeline h4{
+  text-align: left;
+  position: relative;
+  margin-left: 5%;
+}
+
+.timeline_b{
+  position: relative;
+  display: inline-block;
+
+}
+
+.sidebar_background{
+  background-color: #D20000;
+  position: fixed;
+  height: 100%;
+  width: 15%;
+  z-index: 3;
+}
+
+.side_b{
+  background: #e67300;
+  display: block;
+  position: relative;
+  float: left;
+  margin-left: 20%;
+  margin-right: 50%;
+  margin-top: 30%;
+}
+
+#top_b_time{
+  margin-top: 250px;
+  position: relative;
+
+}
+
+.story_display{
+}
