--- a/Corgiwrites-dash.css
+++ b/Corgiwrites-dash.css
@@ -1,11 +1,12 @@
 body{
-  background: #FFF042;
+  background: #FFD2F7;
+
 }
 
 .header_background{
   text-align: center;
-  background-color: #970000;
-  border-radius: 0px 0px 25px 25px;
+  background-color: #62007D;
+  border-radius: 0px 0px 25px 0px;
   position: fixed;
   width: 100%;
   height: 20%;
@@ -15,28 +16,44 @@ body{
 }
 
 .header h1{
+  text-align: left;
   margin-bottom: 25px;
+  margin-left: 60px;
+  color: #FFD361;
+  font-family: Arial;
 }
 
 .header_b{
-  margin-left: 5%;
-  margin-right: 5%;
+  text-align: left;
+  margin-left: 2%;
+  margin-right: 2%;
   display: inline-block;
   position: relative;
   width: 20%;
   height: 30%;
-  background-color: #D80000;
+  color: #FFD361;
   border-radius: 5px;
   text-decoration: none;
-  color: black;
   font-size: 20px;
+  padding-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px
+}
+
+.header_b:hover{
+  background-color: #BA4ED7;
+  border-radius: 100px;
+
+
 }
 
 .timeline_background{
   text-align: center;
-  background-color: #FFA703;
+  background-color: #F0BF41;
+  border-radius: 0px 0px 25px 25px;
   position: fixed;
   width: 85%;
+  height: 15%;
   z-index: 1;
   margin-left: 15%;
   margin-top: 10%;
@@ -51,11 +68,13 @@ body{
 .timeline_b{
   position: relative;
   display: inline-block;
+  margin-left: 20px;
+  margin-top: 30px;
 
 }
 
 .sidebar_background{
-  background-color: #D20000;
+  background-color: #D3A2E0;
   position: fixed;
   height: 100%;
   width: 15%;
@@ -63,20 +82,25 @@ body{
 }
 
 .side_b{
-  background: #e67300;
   display: block;
   position: relative;
+  color: #5D4300;
   float: left;
-  margin-left: 20%;
+  margin-left: 5%;
   margin-right: 50%;
   margin-top: 30%;
+  text-decoration: none;
+  border-radius: 5px;
+  padding: 15px;
+  padding-right: 20px;
+}
+
+.side_b:hover{
+  background-color: #A66FB5;
 }
 
 #top_b_time{
   margin-top: 250px;
   position: relative;
 
-}
-
-.story_display{
 }
